--- a/application/composer.json
+++ b/application/composer.json
@@ -6,7 +6,9 @@
         "twig/twig": "^2.0",
         "respect/validation": "^1.1",
         "phpmailer/phpmailer": "^6.0",
-        "phpoffice/phpspreadsheet": "^1.6"
+        "phpoffice/phpspreadsheet": "^1.6",
+        "zendframework/zend-crypt": "^3.3",
+        "vlucas/phpdotenv": "^3.3"
     },
     "license": "Apache License",
     "authors": [
