--- a/application/composer.json
+++ b/application/composer.json
@@ -8,7 +8,8 @@
         "phpmailer/phpmailer": "^6.0",
         "phpoffice/phpspreadsheet": "^1.6",
         "zendframework/zend-crypt": "^3.3",
-        "vlucas/phpdotenv": "^3.3"
+        "vlucas/phpdotenv": "^3.3",
+        "luthier/luthier": "^1.0"
     },
     "license": "Apache License",
     "authors": [
